force-app/main/default/objects/Student__c/fields/Emaill__c.field-meta.xml
<CustomField>
    <fullName>Emaill__c</fullName>
    <label>Emaill</label>
    <type>Email</type>
</CustomField>