force-app/main/default/objects/Student__c/fields/Father_name__c.field-meta.xml
<CustomField>
    <fullName>Father_name__c</fullName>
    <label>Father name</label>
    <type>TextArea</type>
</CustomField>