force-app/main/default/objects/Student__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <type>DateTime</type>
</CustomField>