force-app/main/default/objects/Student__c/fields/Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Scholarship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship</label>
    <type>Checkbox</type>
</CustomField>