force-app/main/default/objects/Student__c/fields/Student_percentage__c.field-meta.xml
<CustomField>
    <fullName>Student_percentage__c</fullName>
    <label>Student percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>