force-app/main/default/objects/Student__c/fields/Students_fees__c.field-meta.xml
<CustomField>
    <fullName>Students_fees__c</fullName>
    <label>Students fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>